...
    <string name="status">Status</string>
    <string name="email">Requestor/Email id </string>
    <string name="email1">Email</string>
    <string name="helpdesk_url">Helpdesk URL</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="api_key_optional">API Key(Optional)</string>
    <string name="empty_username">Empty username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="inbox">Inbox</string>
    <string name="loading">Loading…</string>
    <string name="message">Message</string>
...
    <string name="error_verifying_url">Please check your Helpdesk URL</string>
    <string name="access_denied">Access denied!</string>
    <string name="please_purchase_faveo">Please purchase Faveo PRO edition to use this app.</string>
    <string name="ok">OK</string>
    <string name="error_checking_pro">Error, while checking Access to Pro Edition!</string>
    <string name="signing_in">Signing in…</string>
    <string name="verifying_url">Verifying URL</string>
    <string name="access_checking">Access checking!</string>
    <string name="restart_app_tittle">Restart App ?</string>
    <string name="done_loading">Done Loading!</string>
    <string name="creating_note">Creating note</string>
    <string name="wrong_user_id">Wrong userID</string>
    <string name="sending_msg">Sending message</string>
    <string name="internal_notes_posted">Internal notes posted</string>
...
