//package co.helpdesk.faveo.pro.frontend.activities;
//
//
//import android.support.test.espresso.ViewInteraction;
//import android.support.test.rule.ActivityTestRule;
//import android.support.test.runner.AndroidJUnit4;
//import android.test.suitebuilder.annotation.LargeTest;
//
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//import co.helpdesk.faveo.pro.R;
//
//import static android.support.test.espresso.Espresso.onView;
//import static android.support.test.espresso.Espresso.pressBack;
//import static android.support.test.espresso.action.ViewActions.click;
//import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
//import static android.support.test.espresso.action.ViewActions.replaceText;
//import static android.support.test.espresso.action.ViewActions.scrollTo;
//import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
//import static android.support.test.espresso.matcher.ViewMatchers.withId;
//import static android.support.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.allOf;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class LoginActivityTest2 {
//
//    @Rule
//    public ActivityTestRule<LoginActivity> mActivityTestRule = new ActivityTestRule<>(LoginActivity.class);
//
//    @Test
//    public void loginActivityTest2() {
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(60000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatAutoCompleteTextView = onView(
//                allOf(withId(R.id.editText_company_url), isDisplayed()));
//        appCompatAutoCompleteTextView.perform(replaceText("http://"), closeSoftKeyboard());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(60000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatAutoCompleteTextView2 = onView(
//                allOf(withId(R.id.editText_company_url), withText("http://"), isDisplayed()));
//        appCompatAutoCompleteTextView2.perform(click());
//
//        ViewInteraction appCompatAutoCompleteTextView3 = onView(
//                allOf(withId(R.id.editText_company_url), withText("http://"), isDisplayed()));
//        appCompatAutoCompleteTextView3.perform(replaceText("http://jamboreebliss.com/sayarnew/public"), closeSoftKeyboard());
//
//        ViewInteraction floatingActionButton = onView(
//                allOf(withId(R.id.fab_verify_url), isDisplayed()));
//        floatingActionButton.perform(click());
//
//        pressBack();
//
//        ViewInteraction appCompatEditText = onView(
//                allOf(withId(R.id.input_username), isDisplayed()));
//        appCompatEditText.perform(click());
//
//        ViewInteraction appCompatEditText2 = onView(
//                allOf(withId(R.id.input_username), isDisplayed()));
//        appCompatEditText2.perform(replaceText("sayar_samanta "), closeSoftKeyboard());
//
//        pressBack();
//
//        ViewInteraction appCompatEditText3 = onView(
//                allOf(withId(R.id.input_password), isDisplayed()));
//        appCompatEditText3.perform(replaceText("home@1234"), closeSoftKeyboard());
//
//        pressBack();
//
//        ViewInteraction appCompatButton = onView(
//                allOf(withId(R.id.button_signin), withText("Sign In")));
//        appCompatButton.perform(scrollTo(), click());
//
//    }
//
//}
